enable script based migration simulation